--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@
     <h2>Hello there! I'm <%= full_name %>.</h2>
     <h3>I'm a full-stack web developer living in <%= city %>.</h3>
     <!-- Short bio about yourself, your skills, whether you're looking for work or not, etc. -->
-    <p><%= lorem.sentences 5 %></p>
+    <p>I want to help make the web beautifully functional. </p>
   </div>
 </div>
 
@@ -18,7 +18,9 @@
     <% project = data.projects.select(&:featured).first %>
 
     <h2>Featured project</h2>
-    <h3><%= link_to project.name, 'portfolio' %></h3>
-    <%= link_to(image_tag(project.screenshot), 'portfolio') %>
+    <h3><%= link_to project.name, '/portfolio.html' %></h3>
+    <%= link_to(image_tag(project.screenshot), '/portfolio.html') %>
   </section>
 </div>
+
+<div class
