--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,12 +7,11 @@
     <h2>Hello there! I'm <%= full_name %>.</h2>
     <h3>I'm a full-stack web developer living in <%= city %>.</h3>
     <!-- Short bio about yourself, your skills, whether you're looking for work or not, etc. -->
-    <p>I want to help make the web beautifully functional. </p>
+    <p>I Build Ruby on Rails web applications with a focus on user experience and am currently seeking opportunities to be part of a team that builds beautifully functional web apps.</p>
   </div>
 </div>
 
 <div class="featured-element-row">
-  <!--  -->
 
   <section class="featured-project">
     <% project = data.projects.select(&:featured).first %>
@@ -23,4 +22,16 @@
   </section>
 </div>
 
-<div class
+<div class="description-element-row">
+
+  <section class="featured-project">
+   <h2>I am excited about:</h2></br>
+
+    <ul>
+      <li><BLOCKQUOTE>Using jQuery and Ajax to build seamless functionality</BLOCKQUOTE></li>
+      <li><BLOCKQUOTE>Creating clean and simple user interface</BLOCKQUOTE></li>
+      <li><blockquote>Writing maintainable, self documenting code</blockquote></li>
+      <li><blockquote>Building and shipping reliable software</blockquote></li>
+      <li><blockquote>Working with a team of passionate developers</blockquote></li>
+  </section>
+</div>
