--- a/source/stylesheets/themes/regal.css.scss
+++ b/source/stylesheets/themes/regal.css.scss
@@ -67,6 +67,9 @@ body {
 // ====||==========================
 
 $bio-background-color: #fff;
+section.featured-project {
+  width: 100%;
+}
 
 
 // ----||--------------------------
