--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,9 +4,9 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="" />
-    <meta name="copyright" content="" />
-    <link type="text/plain" rel="author" href="/humans.txt" />
+    <meta name="description" content="Web Developer" />
+    <meta name="copyright" content="Jason Watson" />
+    <link type="text/plain" rel="Jason Watson" href="/humans.txt" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="HandheldFriendly" content="True" />
@@ -68,12 +68,7 @@
             'LinkedIn',
             linkedin_profile_name,
             "http://linkedin.com/in/#{ linkedin_profile_name}"
-          ) %>
-          <%= social_network_link(
-            'Dribble',
-            dribbble_username,
-            "http://dribble.com/#{dribbble_username}"
-          ) %>    
+          ) %>  
           <%= social_network_link(
             'Github',
             github_username,
@@ -170,6 +165,16 @@
       });
 
       // TODO: Set your Google Analytics code here
+
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-43221854-1', 'jswatson0.github.io');
+      ga('send', 'pageview');
+
+
       var _gaq=[['_setAccount','<%= google_analytics_tracking_id %>'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
