--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Web Developer" />
     <meta name="copyright" content="Jason Watson" />
+    <meta name="author" content"Jason Watson">
     <link type="text/plain" rel="Jason Watson" href="/humans.txt" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
